HFP-3352 Fix scrollbar icon bug

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -2,6 +2,9 @@
 @use 'sizes' as sizes;
 
 @mixin solution-button($icon, $color) {
+  // Prevents the icons being displayed as scrollbars before loading
+  overflow: hidden;
+
   position: absolute;
   top: -0.35em;
   animation: slide-right-fade 0.25s forwards ease-out;
@@ -19,7 +22,6 @@
   filter: drop-shadow(7px 7px 4px #00000065);
 
   z-index: 1;
-  overflow: overlay;
 }
 
 @mixin hover-overlay() {
